src/yacc.output
   0  $accept : list $end

   1  $$1 :

   2  list : $$1 stmts

   3  stmts :
   4        | stmt stmts

   5  optstmt :
   6          | nosemi

   7  stmt : ';'
   8       | nosemi
   9       | nosemi ';'

  10  nosemi : stmtnv
  11         | expr

  12  stmtnv : RETURN
  13         | RETURN '(' ')'
  14         | RETURN '(' expr ')'
  15         | BREAK
  16         | CONTINUE

  17  $$2 :

  18  stmtnv : GLOBALDEC $$2 globlist

  19  expr : '{' stmts '}'
  20       | SYM_DELETE expr
  21       | READONLY var
  22       | ONCHANGE '(' var ',' expr ')'

  23  $$3 :

  24  expr : WHILE $$3 '(' expr tcond ')' stmt goto end

  25  $$4 :

  26  expr : FOR '(' optstmt $$4 ';' optrelx tfcond ';' optstmt goto ')' stmt goto end

  27  $$5 :

  28  expr : FOR '(' var SYM_IN $$5 expr forin1 forin2 ')' stmt goto forinend
  29       | IF '(' expr tcond ')' stmt end
  30       | IF '(' expr tcond ')' stmt ELSE goto stmt end

  31  $$6 :

  32  expr : KW_NEW var '(' prefunc3 $$6 narglist ')'
  33       | KW_NEW '(' prefunc3 expr ')' var '(' narglist ')'
  34       | UNDEFINE var
  35       | UNDEFINE '(' var ')'

  36  $$7 :

  37  expr : '[' $$7 arrlist ']'
  38       | INTEGER
  39       | DOUBLE
  40       | STRING
  41       | PHRASE
  42       | var
  43       | QMARK2
  44       | DOUBLE dottype
  45       | expr '[' expr ']'
  46       | expr '{' select1 select2 expr select3 '}' end
  47       | expr '?' tcond expr goto ':' expr end
  48       | '(' expr ')'
  49       | DEFINED '(' var ')'
  50       | DEFINED '(' '$' ')'
  51       | DEFINED '(' DOLLAR2 ')'
  52       | DEFINED '(' expr '.' method ')'
  53       | DEFINED var
  54       | expr '%' expr
  55       | expr '+' expr
  56       | expr '-' expr
  57       | expr '*' expr
  58       | expr '/' expr
  59       | expr '|' expr
  60       | expr '&' expr
  61       | expr '^' expr
  62       | expr LSHIFT expr
  63       | expr RSHIFT expr
  64       | '-' expr
  65       | '~' expr
  66       | expr GT expr
  67       | expr LT expr
  68       | expr GE expr
  69       | expr LE expr
  70       | expr EQ expr
  71       | expr REGEXEQ expr
  72       | expr NE expr
  73       | BANG expr
  74       | expr SYM_IN expr
  75       | expr and expr end
  76       | expr or expr end
  77       | expr equals expr
  78       | expr INC
  79       | expr DEC
  80       | INC expr
  81       | DEC expr
  82       | EVAL expr
  83       | '$'
  84       | DOLLAR2
  85       | OBJECT
  86       | expr '.' dottype
  87       | expr '.' method
  88       | expr '.' method '(' preobj arglist ')'
  89       | TASK var '(' prefunc3 arglist ')'
  90       | TASK expr '(' arglist ')'
  91       | TASK expr '.' method '(' preobj arglist ')'
  92       | var '(' prefunc3 arglist ')'
  93       | expr '(' prefunc1 arglist ')'
  94       | NARGS '(' ')'
  95       | TYPEOF '(' expr ')'
  96       | XY '(' expr ',' expr ')'
  97       | XY '(' expr ',' expr ',' expr ',' expr ')'

  98  $$8 :

  99  $$9 :

 100  expr : GLOBALDEC '(' $$8 globvar $$9 ')'
 101       | FUNC '(' expr ')'

 102  $$10 :

 103  $$11 :

 104  $$12 :

 105  expr : FUNC var $$10 funcstart '(' $$11 prmlist $$12 ')' '{' stmts '}'

 106  $$13 :

 107  $$14 :

 108  expr : FUNC var $$13 funcstart $$14 '{' stmts '}'

 109  $$15 :

 110  $$16 :

 111  $$17 :

 112  expr : FUNC uniqvar $$15 funcstart '(' $$16 prmlist $$17 ')' '{' stmts '}'

 113  $$18 :

 114  $$19 :

 115  expr : FUNC uniqvar $$18 funcstart $$19 '{' stmts '}'

 116  $$20 :

 117  $$21 :

 118  expr : CLASS var $$20 funcstart $$21 '{' methdefs '}'

 119  methdefs :
 120           | methdef methdefs

 121  uniqm :

 122  $$22 :

 123  $$23 :

 124  $$24 :

 125  $$25 :

 126  methdef : METHOD methname $$22 uniqm $$23 funcstart '(' $$24 prmlist $$25 ')' '{' stmts '}'

 127  $$26 :

 128  $$27 :

 129  $$28 :

 130  methdef : METHOD methname $$26 uniqm $$27 funcstart $$28 '{' stmts '}'

 131  prefunc1 :

 132  prefunc3 :

 133  preobj :

 134  dottype : VOL
 135          | DUR
 136          | CHAN
 137          | PORT
 138          | TIME
 139          | PITCH
 140          | LENGTH
 141          | TYPE
 142          | ATTRIB
 143          | FLAGS
 144          | NUMBER

 145  equals : PLUSEQ
 146         | MINUSEQ
 147         | MULEQ
 148         | DIVEQ
 149         | OREQ
 150         | AMPEQ
 151         | XOREQ
 152         | RSHIFTEQ
 153         | LSHIFTEQ
 154         | '='

 155  end :

 156  goto :

 157  tcond :

 158  tfcond :

 159  optrelx :
 160          | expr

 161  forin1 :

 162  forin2 :

 163  forinend :

 164  and : AND

 165  or : OR

 166  select1 :

 167  select2 :

 168  select3 :

 169  funcstart :

 170  uniqvar : '?'

 171  prmlist :
 172          | prms
 173          | DOTDOTDOT
 174          | prms ',' DOTDOTDOT

 175  prms : var
 176       | prms ',' var

 177  arglist :
 178          | args
 179          | DOTDOTDOT
 180          | args ',' DOTDOTDOT
 181          | VARG '(' expr ')'
 182          | args ',' VARG '(' expr ')'

 183  narglist :
 184           | args
 185           | DOTDOTDOT
 186           | args ',' DOTDOTDOT
 187           | VARG '(' expr ')'
 188           | args ',' VARG '(' expr ')'

 189  args : expr
 190       | args ',' expr

 191  arritem : expr '=' expr

 192  arrlist :
 193          | arritem
 194          | arrlist ',' arritem

 195  globvar : var

 196  globlist : globvar
 197           | globlist ',' globvar

 198  var : NAME
 199      | VOL
 200      | DUR
 201      | CHAN
 202      | PORT
 203      | TIME
 204      | PITCH
 205      | LENGTH
 206      | TYPE
 207      | ATTRIB
 208      | FLAGS
 209      | NUMBER
 210      | CLASS

 211  methname : NAME
 212           | SYM_DELETE
 213           | CLASS

 214  method : NAME
 215         | SYM_DELETE
 216         | CLASS
 217         | '(' expr ')'

state 0
	$accept : . list $end  (0)
	$$1 : .  (1)

	.  reduce 1

	list  goto 1
	$$1  goto 2


state 1
	$accept : list . $end  (0)

	$end  accept


state 2
	list : $$1 . stmts  (2)
	stmts : .  (3)

	QMARK2  shift 3
	DOLLAR2  shift 4
	WHILE  shift 5
	IF  shift 6
	FOR  shift 7
	EVAL  shift 8
	BREAK  shift 9
	CONTINUE  shift 10
	TASK  shift 11
	SYM_DELETE  shift 12
	UNDEFINE  shift 13
	RETURN  shift 14
	FUNC  shift 15
	DEFINED  shift 16
	READONLY  shift 17
	ONCHANGE  shift 18
	GLOBALDEC  shift 19
	CLASS  shift 20
	KW_NEW  shift 21
	NARGS  shift 22
	TYPEOF  shift 23
	XY  shift 24
	DUR  shift 25
	VOL  shift 26
	TIME  shift 27
	CHAN  shift 28
	PITCH  shift 29
	LENGTH  shift 30
	NUMBER  shift 31
	TYPE  shift 32
	ATTRIB  shift 33
	FLAGS  shift 34
	PORT  shift 35
	PHRASE  shift 36
	STRING  shift 37
	NAME  shift 38
	INTEGER  shift 39
	OBJECT  shift 40
	DOUBLE  shift 41
	INC  shift 42
	DEC  shift 43
	'-'  shift 44
	BANG  shift 45
	'~'  shift 46
	';'  shift 47
	'('  shift 48
	'{'  shift 49
	'['  shift 50
	'$'  shift 51
	$end  reduce 3

	expr  goto 52
	stmt  goto 53
	stmts  goto 54
	nosemi  goto 55
	stmtnv  goto 56
	var  goto 57


state 3
	expr : QMARK2 .  (43)

	.  reduce 43


state 4
	expr : DOLLAR2 .  (84)

	.  reduce 84


state 5
	expr : WHILE . $$3 '(' expr tcond ')' stmt goto end  (24)
	$$3 : .  (23)

	.  reduce 23

	$$3  goto 58


state 6
	expr : IF . '(' expr tcond ')' stmt end  (29)
	expr : IF . '(' expr tcond ')' stmt ELSE goto stmt end  (30)

	'('  shift 59
	.  error


state 7
	expr : FOR . '(' optstmt $$4 ';' optrelx tfcond ';' optstmt goto ')' stmt goto end  (26)
	expr : FOR . '(' var SYM_IN $$5 expr forin1 forin2 ')' stmt goto forinend  (28)

	'('  shift 60
	.  error


state 8
	expr : EVAL . expr  (82)

	QMARK2  shift 3
	DOLLAR2  shift 4
	WHILE  shift 5
	IF  shift 6
	FOR  shift 7
	EVAL  shift 8
	TASK  shift 11
	SYM_DELETE  shift 12
	UNDEFINE  shift 13
	FUNC  shift 15
	DEFINED  shift 16
	READONLY  shift 17
	ONCHANGE  shift 18
	GLOBALDEC  shift 61
	CLASS  shift 20
	KW_NEW  shift 21
	NARGS  shift 22
	TYPEOF  shift 23
	XY  shift 24
	DUR  shift 25
	VOL  shift 26
	TIME  shift 27
	CHAN  shift 28
	PITCH  shift 29
	LENGTH  shift 30
	NUMBER  shift 31
	TYPE  shift 32
	ATTRIB  shift 33
	FLAGS  shift 34
	PORT  shift 35
	PHRASE  shift 36
	STRING  shift 37
	NAME  shift 38
	INTEGER  shift 39
	OBJECT  shift 40
	DOUBLE  shift 41
	INC  shift 42
	DEC  shift 43
	'-'  shift 44
	BANG  shift 45
	'~'  shift 46
	'('  shift 48
	'{'  shift 49
	'['  shift 50
	'$'  shift 51
	.  error

	expr  goto 62
	var  goto 57


state 9
	stmtnv : BREAK .  (15)

	.  reduce 15


state 10
	stmtnv : CONTINUE .  (16)

	.  reduce 16


state 11
	expr : TASK . var '(' prefunc3 arglist ')'  (89)
	expr : TASK . expr '(' arglist ')'  (90)
	expr : TASK . expr '.' method '(' preobj arglist ')'  (91)

	QMARK2  shift 3
	DOLLAR2  shift 4
	WHILE  shift 5
	IF  shift 6
	FOR  shift 7
	EVAL  shift 8
	TASK  shift 11
	SYM_DELETE  shift 12
	UNDEFINE  shift 13
	FUNC  shift 15
	DEFINED  shift 16
	READONLY  shift 17
	ONCHANGE  shift 18
	GLOBALDEC  shift 61
	CLASS  shift 20
	KW_NEW  shift 21
	NARGS  shift 22
	TYPEOF  shift 23
	XY  shift 24
	DUR  shift 25
	VOL  shift 26
	TIME  shift 27
	CHAN  shift 28
	PITCH  shift 29
	LENGTH  shift 30
	NUMBER  shift 31
	TYPE  shift 32
	ATTRIB  shift 33
	FLAGS  shift 34
	PORT  shift 35
	PHRASE  shift 36
	STRING  shift 37
	NAME  shift 38
	INTEGER  shift 39
	OBJECT  shift 40
	DOUBLE  shift 41
	INC  shift 42
	DEC  shift 43
	'-'  shift 44
	BANG  shift 45
	'~'  shift 46
	'('  shift 48
	'{'  shift 49
	'['  shift 50
	'$'  shift 51
	.  error

	expr  goto 63
	var  goto 64


state 12
	expr : SYM_DELETE . expr  (20)

	QMARK2  shift 3
	DOLLAR2  shift 4
	WHILE  shift 5
	IF  shift 6
	FOR  shift 7
	EVAL  shift 8
	TASK  shift 11
	SYM_DELETE  shift 12
	UNDEFINE  shift 13
	FUNC  shift 15
	DEFINED  shift 16
	READONLY  shift 17
	ONCHANGE  shift 18
	GLOBALDEC  shift 61
	CLASS  shift 20
	KW_NEW  shift 21
	NARGS  shift 22
	TYPEOF  shift 23
	XY  shift 24
	DUR  shift 25
	VOL  shift 26
	TIME  shift 27
	CHAN  shift 28
	PITCH  shift 29
	LENGTH  shift 30
	NUMBER  shift 31
	TYPE  shift 32
	ATTRIB  shift 33
	FLAGS  shift 34
	PORT  shift 35
	PHRASE  shift 36
	STRING  shift 37
	NAME  shift 38
	INTEGER  shift 39
	OBJECT  shift 40
	DOUBLE  shift 41
	INC  shift 42
	DEC  shift 43
	'-'  shift 44
	BANG  shift 45
	'~'  shift 46
	'('  shift 48
	'{'  shift 49
	'['  shift 50
	'$'  shift 51
	.  error

	expr  goto 65
	var  goto 57


state 13
	expr : UNDEFINE . var  (34)
	expr : UNDEFINE . '(' var ')'  (35)

	CLASS  shift 66
	DUR  shift 25
	VOL  shift 26
	TIME  shift 27
	CHAN  shift 28
	PITCH  shift 29
	LENGTH  shift 30
	NUMBER  shift 31
	TYPE  shift 32
	ATTRIB  shift 33
	FLAGS  shift 34
	PORT  shift 35
	NAME  shift 38
	'('  shift 67
	.  error

	var  goto 68


14: shift/reduce conflict (shift 69, reduce 12) on '('
state 14
	stmtnv : RETURN .  (12)
	stmtnv : RETURN . '(' ')'  (13)
	stmtnv : RETURN . '(' expr ')'  (14)

	'('  shift 69
	$end  reduce 12
	QMARK2  reduce 12
	DOLLAR2  reduce 12
	WHILE  reduce 12
	IF  reduce 12
	ELSE  reduce 12
	FOR  reduce 12
	SYM_IN  reduce 12
	EVAL  reduce 12
	BREAK  reduce 12
	CONTINUE  reduce 12
	TASK  reduce 12
	SYM_DELETE  reduce 12
	UNDEFINE  reduce 12
	RETURN  reduce 12
	FUNC  reduce 12
	DEFINED  reduce 12
	READONLY  reduce 12
	ONCHANGE  reduce 12
	GLOBALDEC  reduce 12
	CLASS  reduce 12
	KW_NEW  reduce 12
	NARGS  reduce 12
	TYPEOF  reduce 12
	XY  reduce 12
	DUR  reduce 12
	VOL  reduce 12
	TIME  reduce 12
	CHAN  reduce 12
	PITCH  reduce 12
	LENGTH  reduce 12
	NUMBER  reduce 12
	TYPE  reduce 12
	ATTRIB  reduce 12
	FLAGS  reduce 12
	PORT  reduce 12
	PHRASE  reduce 12
	STRING  reduce 12
	NAME  reduce 12
	INTEGER  reduce 12
	OBJECT  reduce 12
	DOUBLE  reduce 12
	PLUSEQ  reduce 12
	MINUSEQ  reduce 12
	MULEQ  reduce 12
	DIVEQ  reduce 12
	AMPEQ  reduce 12
	INC  reduce 12
	DEC  reduce 12
	OREQ  reduce 12
	XOREQ  reduce 12
	RSHIFTEQ  reduce 12
	LSHIFTEQ  reduce 12
	'='  reduce 12
	'?'  reduce 12
	':'  reduce 12
	OR  reduce 12
	AND  reduce 12
	'|'  reduce 12
	'^'  reduce 12
	'&'  reduce 12
	GT  reduce 12
	GE  reduce 12
	LT  reduce 12
	LE  reduce 12
	EQ  reduce 12
	NE  reduce 12
	REGEXEQ  reduce 12
	LSHIFT  reduce 12
	RSHIFT  reduce 12
	'+'  reduce 12
	'-'  reduce 12
	'*'  reduce 12
	'/'  reduce 12
	BANG  reduce 12
	'~'  reduce 12
	'%'  reduce 12
	'.'  reduce 12
	';'  reduce 12
	')'  reduce 12
	'{'  reduce 12
	'}'  reduce 12
	','  reduce 12
	'['  reduce 12
	']'  reduce 12
	'$'  reduce 12


state 15
	expr : FUNC . '(' expr ')'  (101)
	expr : FUNC . var $$10 funcstart '(' $$11 prmlist $$12 ')' '{' stmts '}'  (105)
	expr : FUNC . var $$13 funcstart $$14 '{' stmts '}'  (108)
	expr : FUNC . uniqvar $$15 funcstart '(' $$16 prmlist $$17 ')' '{' stmts '}'  (112)
	expr : FUNC . uniqvar $$18 funcstart $$19 '{' stmts '}'  (115)

	CLASS  shift 66
	DUR  shift 25
	VOL  shift 26
	TIME  shift 27
	CHAN  shift 28
	PITCH  shift 29
	LENGTH  shift 30
	NUMBER  shift 31
	TYPE  shift 32
	ATTRIB  shift 33
	FLAGS  shift 34
	PORT  shift 35
	NAME  shift 38
	'?'  shift 70
	'('  shift 71
	.  error

	uniqvar  goto 72
	var  goto 73


state 16
	expr : DEFINED . '(' var ')'  (49)
	expr : DEFINED . '(' '$' ')'  (50)
	expr : DEFINED . '(' DOLLAR2 ')'  (51)
	expr : DEFINED . '(' expr '.' method ')'  (52)
	expr : DEFINED . var  (53)

	CLASS  shift 66
	DUR  shift 25
	VOL  shift 26
	TIME  shift 27
	CHAN  shift 28
	PITCH  shift 29
	LENGTH  shift 30
	NUMBER  shift 31
	TYPE  shift 32
	ATTRIB  shift 33
	FLAGS  shift 34
	PORT  shift 35
	NAME  shift 38
	'('  shift 74
	.  error

	var  goto 75


state 17
	expr : READONLY . var  (21)

	CLASS  shift 66
	DUR  shift 25
	VOL  shift 26
	TIME  shift 27
	CHAN  shift 28
	PITCH  shift 29
	LENGTH  shift 30
	NUMBER  shift 31
	TYPE  shift 32
	ATTRIB  shift 33
	FLAGS  shift 34
	PORT  shift 35
	NAME  shift 38
	.  error

	var  goto 76


state 18
	expr : ONCHANGE . '(' var ',' expr ')'  (22)

	'('  shift 77
	.  error


state 19
	stmtnv : GLOBALDEC . $$2 globlist  (18)
	expr : GLOBALDEC . '(' $$8 globvar $$9 ')'  (100)
	$$2 : .  (17)

	'('  shift 78
	CLASS  reduce 17
	DUR  reduce 17
	VOL  reduce 17
	TIME  reduce 17
	CHAN  reduce 17
	PITCH  reduce 17
	LENGTH  reduce 17
	NUMBER  reduce 17
	TYPE  reduce 17
	ATTRIB  reduce 17
	FLAGS  reduce 17
	PORT  reduce 17
	NAME  reduce 17

	$$2  goto 79


20: shift/reduce conflict (shift 66, reduce 210) on CLASS
20: shift/reduce conflict (shift 25, reduce 210) on DUR
20: shift/reduce conflict (shift 26, reduce 210) on VOL
20: shift/reduce conflict (shift 27, reduce 210) on TIME
20: shift/reduce conflict (shift 28, reduce 210) on CHAN
20: shift/reduce conflict (shift 29, reduce 210) on PITCH
20: shift/reduce conflict (shift 30, reduce 210) on LENGTH
20: shift/reduce conflict (shift 31, reduce 210) on NUMBER
20: shift/reduce conflict (shift 32, reduce 210) on TYPE
20: shift/reduce conflict (shift 33, reduce 210) on ATTRIB
20: shift/reduce conflict (shift 34, reduce 210) on FLAGS
20: shift/reduce conflict (shift 35, reduce 210) on PORT
20: shift/reduce conflict (shift 38, reduce 210) on NAME
state 20
	expr : CLASS . var $$20 funcstart $$21 '{' methdefs '}'  (118)
	var : CLASS .  (210)

	CLASS  shift 66
	DUR  shift 25
	VOL  shift 26
	TIME  shift 27
	CHAN  shift 28
	PITCH  shift 29
	LENGTH  shift 30
	NUMBER  shift 31
	TYPE  shift 32
	ATTRIB  shift 33
	FLAGS  shift 34
	PORT  shift 35
	NAME  shift 38
	$end  reduce 210
	QMARK2  reduce 210
	DOLLAR2  reduce 210
	WHILE  reduce 210
	IF  reduce 210
	ELSE  reduce 210
	FOR  reduce 210
	SYM_IN  reduce 210
	EVAL  reduce 210
	BREAK  reduce 210
	CONTINUE  reduce 210
	TASK  reduce 210
	SYM_DELETE  reduce 210
	UNDEFINE  reduce 210
	RETURN  reduce 210
	FUNC  reduce 210
	DEFINED  reduce 210
	READONLY  reduce 210
	ONCHANGE  reduce 210
	GLOBALDEC  reduce 210
	KW_NEW  reduce 210
	NARGS  reduce 210
	TYPEOF  reduce 210
	XY  reduce 210
	PHRASE  reduce 210
	STRING  reduce 210
	INTEGER  reduce 210
	OBJECT  reduce 210
	DOUBLE  reduce 210
	PLUSEQ  reduce 210
	MINUSEQ  reduce 210
	MULEQ  reduce 210
	DIVEQ  reduce 210
	AMPEQ  reduce 210
	INC  reduce 210
	DEC  reduce 210
	OREQ  reduce 210
	XOREQ  reduce 210
	RSHIFTEQ  reduce 210
	LSHIFTEQ  reduce 210
	'='  reduce 210
	'?'  reduce 210
	':'  reduce 210
	OR  reduce 210
	AND  reduce 210
	'|'  reduce 210
	'^'  reduce 210
	'&'  reduce 210
	GT  reduce 210
	GE  reduce 210
	LT  reduce 210
	LE  reduce 210
	EQ  reduce 210
	NE  reduce 210
	REGEXEQ  reduce 210
	LSHIFT  reduce 210
	RSHIFT  reduce 210
	'+'  reduce 210
	'-'  reduce 210
	'*'  reduce 210
	'/'  reduce 210
	BANG  reduce 210
	'~'  reduce 210
	'%'  reduce 210
	'.'  reduce 210
	';'  reduce 210
	'('  reduce 210
	')'  reduce 210
	'{'  reduce 210
	'}'  reduce 210
	','  reduce 210
	'['  reduce 210
	']'  reduce 210
	'$'  reduce 210

	var  goto 80


state 21
	expr : KW_NEW . var '(' prefunc3 $$6 narglist ')'  (32)
	expr : KW_NEW . '(' prefunc3 expr ')' var '(' narglist ')'  (33)

	CLASS  shift 66
	DUR  shift 25
	VOL  shift 26
	TIME  shift 27
	CHAN  shift 28
	PITCH  shift 29
	LENGTH  shift 30
	NUMBER  shift 31
	TYPE  shift 32
	ATTRIB  shift 33
	FLAGS  shift 34
	PORT  shift 35
	NAME  shift 38
	'('  shift 81
	.  error

	var  goto 82


state 22
	expr : NARGS . '(' ')'  (94)

	'('  shift 83
	.  error


state 23
	expr : TYPEOF . '(' expr ')'  (95)

	'('  shift 84
	.  error


state 24
	expr : XY . '(' expr ',' expr ')'  (96)
	expr : XY . '(' expr ',' expr ',' expr ',' expr ')'  (97)

	'('  shift 85
	.  error


state 25
	var : DUR .  (200)

	.  reduce 200


state 26
	var : VOL .  (199)

	.  reduce 199


state 27
	var : TIME .  (203)

	.  reduce 203


state 28
	var : CHAN .  (201)

	.  reduce 201


state 29
	var : PITCH .  (204)

	.  reduce 204


state 30
	var : LENGTH .  (205)

	.  reduce 205


state 31
	var : NUMBER .  (209)

	.  reduce 209


state 32
	var : TYPE .  (206)

	.  reduce 206


state 33
	var : ATTRIB .  (207)

	.  reduce 207


state 34
	var : FLAGS .  (208)

	.  reduce 208


state 35
	var : PORT .  (202)

	.  reduce 202


state 36
	expr : PHRASE .  (41)

	.  reduce 41


state 37
	expr : STRING .  (40)

	.  reduce 40


state 38
	var : NAME .  (198)

	.  reduce 198


state 39
	expr : INTEGER .  (38)

	.  reduce 38


state 40
	expr : OBJECT .  (85)

	.  reduce 85


41: shift/reduce conflict (shift 86, reduce 39) on DUR
41: shift/reduce conflict (shift 87, reduce 39) on VOL
41: shift/reduce conflict (shift 88, reduce 39) on TIME
41: shift/reduce conflict (shift 89, reduce 39) on CHAN
41: shift/reduce conflict (shift 90, reduce 39) on PITCH
41: shift/reduce conflict (shift 91, reduce 39) on LENGTH
41: shift/reduce conflict (shift 92, reduce 39) on NUMBER
41: shift/reduce conflict (shift 93, reduce 39) on TYPE
41: shift/reduce conflict (shift 94, reduce 39) on ATTRIB
41: shift/reduce conflict (shift 95, reduce 39) on FLAGS
41: shift/reduce conflict (shift 96, reduce 39) on PORT
state 41
	expr : DOUBLE .  (39)
	expr : DOUBLE . dottype  (44)

	DUR  shift 86
	VOL  shift 87
	TIME  shift 88
	CHAN  shift 89
	PITCH  shift 90
	LENGTH  shift 91
	NUMBER  shift 92
	TYPE  shift 93
	ATTRIB  shift 94
	FLAGS  shift 95
	PORT  shift 96
	$end  reduce 39
	QMARK2  reduce 39
	DOLLAR2  reduce 39
	WHILE  reduce 39
	IF  reduce 39
	ELSE  reduce 39
	FOR  reduce 39
	SYM_IN  reduce 39
	EVAL  reduce 39
	BREAK  reduce 39
	CONTINUE  reduce 39
	TASK  reduce 39
	SYM_DELETE  reduce 39
	UNDEFINE  reduce 39
	RETURN  reduce 39
	FUNC  reduce 39
	DEFINED  reduce 39
	READONLY  reduce 39
	ONCHANGE  reduce 39
	GLOBALDEC  reduce 39
	CLASS  reduce 39
	KW_NEW  reduce 39
	NARGS  reduce 39
	TYPEOF  reduce 39
	XY  reduce 39
	PHRASE  reduce 39
	STRING  reduce 39
	NAME  reduce 39
	INTEGER  reduce 39
	OBJECT  reduce 39
	DOUBLE  reduce 39
	PLUSEQ  reduce 39
	MINUSEQ  reduce 39
	MULEQ  reduce 39
	DIVEQ  reduce 39
	AMPEQ  reduce 39
	INC  reduce 39
	DEC  reduce 39
	OREQ  reduce 39
	XOREQ  reduce 39
	RSHIFTEQ  reduce 39
	LSHIFTEQ  reduce 39
	'='  reduce 39
	'?'  reduce 39
	':'  reduce 39
	OR  reduce 39
	AND  reduce 39
	'|'  reduce 39
	'^'  reduce 39
	'&'  reduce 39
	GT  reduce 39
	GE  reduce 39
	LT  reduce 39
	LE  reduce 39
	EQ  reduce 39
	NE  reduce 39
	REGEXEQ  reduce 39
	LSHIFT  reduce 39
	RSHIFT  reduce 39
	'+'  reduce 39
	'-'  reduce 39
	'*'  reduce 39
	'/'  reduce 39
	BANG  reduce 39
	'~'  reduce 39
	'%'  reduce 39
	'.'  reduce 39
	';'  reduce 39
	'('  reduce 39
	')'  reduce 39
	'{'  reduce 39
	'}'  reduce 39
	','  reduce 39
	'['  reduce 39
	']'  reduce 39
	'$'  reduce 39

	dottype  goto 97


state 42
	expr : INC . expr  (80)

	QMARK2  shift 3
	DOLLAR2  shift 4
	WHILE  shift 5
	IF  shift 6
	FOR  shift 7
	EVAL  shift 8
	TASK  shift 11
	SYM_DELETE  shift 12
	UNDEFINE  shift 13
	FUNC  shift 15
	DEFINED  shift 16
	READONLY  shift 17
	ONCHANGE  shift 18
	GLOBALDEC  shift 61
	CLASS  shift 20
	KW_NEW  shift 21
	NARGS  shift 22
	TYPEOF  shift 23
	XY  shift 24
	DUR  shift 25
	VOL  shift 26
	TIME  shift 27
	CHAN  shift 28
	PITCH  shift 29
	LENGTH  shift 30
	NUMBER  shift 31
	TYPE  shift 32
	ATTRIB  shift 33
	FLAGS  shift 34
	PORT  shift 35
	PHRASE  shift 36
	STRING  shift 37
	NAME  shift 38
	INTEGER  shift 39
	OBJECT  shift 40
	DOUBLE  shift 41
	INC  shift 42
	DEC  shift 43
	'-'  shift 44
	BANG  shift 45
	'~'  shift 46
	'('  shift 48
	'{'  shift 49
	'['  shift 50
	'$'  shift 51
	.  error

	expr  goto 98
	var  goto 57


state 43
	expr : DEC . expr  (81)

	QMARK2  shift 3
	DOLLAR2  shift 4
	WHILE  shift 5
	IF  shift 6
	FOR  shift 7
	EVAL  shift 8
	TASK  shift 11
	SYM_DELETE  shift 12
	UNDEFINE  shift 13
	FUNC  shift 15
	DEFINED  shift 16
	READONLY  shift 17
	ONCHANGE  shift 18
	GLOBALDEC  shift 61
	CLASS  shift 20
	KW_NEW  shift 21
	NARGS  shift 22
	TYPEOF  shift 23
	XY  shift 24
	DUR  shift 25
	VOL  shift 26
	TIME  shift 27
	CHAN  shift 28
	PITCH  shift 29
	LENGTH  shift 30
	NUMBER  shift 31
	TYPE  shift 32
	ATTRIB  shift 33
	FLAGS  shift 34
	PORT  shift 35
	PHRASE  shift 36
	STRING  shift 37
	NAME  shift 38
	INTEGER  shift 39
	OBJECT  shift 40
	DOUBLE  shift 41
	INC  shift 42
	DEC  shift 43
	'-'  shift 44
	BANG  shift 45
	'~'  shift 46
	'('  shift 48
	'{'  shift 49
	'['  shift 50
	'$'  shift 51
	.  error

	expr  goto 99
	var  goto 57


state 44
	expr : '-' . expr  (64)

	QMARK2  shift 3
	DOLLAR2  shift 4
	WHILE  shift 5
	IF  shift 6
	FOR  shift 7
	EVAL  shift 8
	TASK  shift 11
	SYM_DELETE  shift 12
	UNDEFINE  shift 13
	FUNC  shift 15
	DEFINED  shift 16
	READONLY  shift 17
	ONCHANGE  shift 18
	GLOBALDEC  shift 61
	CLASS  shift 20
	KW_NEW  shift 21
	NARGS  shift 22
	TYPEOF  shift 23
	XY  shift 24
	DUR  shift 25
	VOL  shift 26
	TIME  shift 27
	CHAN  shift 28
	PITCH  shift 29
	LENGTH  shift 30
	NUMBER  shift 31
	TYPE  shift 32
	ATTRIB  shift 33
	FLAGS  shift 34
	PORT  shift 35
	PHRASE  shift 36
	STRING  shift 37
	NAME  shift 38
	INTEGER  shift 39
	OBJECT  shift 40
	DOUBLE  shift 41
	INC  shift 42
	DEC  shift 43
	'-'  shift 44
	BANG  shift 45
	'~'  shift 46
	'('  shift 48
	'{'  shift 49
	'['  shift 50
	'$'  shift 51
	.  error

	expr  goto 100
	var  goto 57


state 45
	expr : BANG . expr  (73)

	QMARK2  shift 3
	DOLLAR2  shift 4
	WHILE  shift 5
	IF  shift 6
	FOR  shift 7
	EVAL  shift 8
	TASK  shift 11
	SYM_DELETE  shift 12
	UNDEFINE  shift 13
	FUNC  shift 15
	DEFINED  shift 16
	READONLY  shift 17
	ONCHANGE  shift 18
	GLOBALDEC  shift 61
	CLASS  shift 20
	KW_NEW  shift 21
	NARGS  shift 22
	TYPEOF  shift 23
	XY  shift 24
	DUR  shift 25
	VOL  shift 26
	TIME  shift 27
	CHAN  shift 28
	PITCH  shift 29
	LENGTH  shift 30
	NUMBER  shift 31
	TYPE  shift 32
	ATTRIB  shift 33
	FLAGS  shift 34
	PORT  shift 35
	PHRASE  shift 36
	STRING  shift 37
	NAME  shift 38
	INTEGER  shift 39
	OBJECT  shift 40
	DOUBLE  shift 41
	INC  shift 42
	DEC  shift 43
	'-'  shift 44
	BANG  shift 45
	'~'  shift 46
	'('  shift 48
	'{'  shift 49
	'['  shift 50
	'$'  shift 51
	.  error

	expr  goto 101
	var  goto 57


state 46
	expr : '~' . expr  (65)
